--- a/DAIMainEXProject/Config/DefaultEngine.ini
+++ b/DAIMainEXProject/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 EditorStartupMap=/Game/Level/Levels/DefaultLevel.DefaultLevel
 LocalMapOptions=
 TransitionMap=/Game/DAIExampleProject/Examples/Level/Transition.Transition
-bUseSplitscreen=True
+bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
