--- a/DAIMainEXProject/Config/DefaultGameplayTags.ini
+++ b/DAIMainEXProject/Config/DefaultGameplayTags.ini
@@ -100,7 +100,7 @@
 +GameplayTagList=(Tag="State.Movement.WallRunning",DevComment="Wall running state")
 +GameplayTagList=(Tag="Cooldown.WallRun",DevComment="Wall run cooldown")
 ImportTagsFromConfig=False
-WarnOnInvalidTags=True
+WarnOnInvalidTags=False
 ClearInvalidTags=False
 AllowEditorTagUnloading=True
 AllowGameTagUnloading=False
